--- a/app/src/main/res/layout/activity_forgetpassword.xml
+++ b/app/src/main/res/layout/activity_forgetpassword.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:text="Email"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/signInBottomGuideline"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:textColor="#000000"
         android:textSize="20sp"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/resetpasswordButton"
+        app:layout_constraintBottom_toTopOf="@+id/resetPasswordButton"
         app:layout_constraintEnd_toEndOf="@+id/rightGuideline"
         app:layout_constraintHorizontal_bias="0.587"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
@@ -104,27 +104,32 @@
         app:layout_constraintGuide_percent="0.93" />
 
     <Button
-        android:id="@+id/resetpasswordButton"
+        android:id="@+id/resetPasswordButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_height="48dp"
         android:backgroundTint="#2196F3"
         android:text="Reset Password"
+        app:layout_constraintBottom_toTopOf="@+id/buttonAreaTopGuideLine"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
-        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />
+        app:layout_constraintTop_toTopOf="@+id/signInBottomGuideline" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/forgotPasswordBackButton"
+        android:layout_width="64dp"
+        android:layout_height="27dp"
+        android:backgroundTint="@color/grey"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="0dp"
         android:text="Back"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/imageTopGuideline"
+        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
