--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,7 +11,7 @@
         android:padding="24dp">
 
         <Button
-            android:id="@+id/buttonBack"
+            android:id="@+id/signUpBackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Back"
