add sharedPreferences on SignUp and SignIn page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -152,7 +152,8 @@
         android:id="@+id/signInButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:backgroundTint="#2196F3"
+        android:backgroundTint="@color/blue"
+        android:textColor="@color/white"
         android:text="Sign In"
         app:layout_constraintBottom_toTopOf="@+id/forgotPasswordButton"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
@@ -167,7 +168,7 @@
         android:padding="2dp"
         android:text="Forgot Password"
         android:textAlignment="textStart"
-        android:textColor="#716E6E"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/inputsBottomGuideLine"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintHorizontal_bias="0"
