--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="First name"
+            android:textColor="@color/black"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_marginBottom="8dp"/>
 
@@ -31,6 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="First name"
+            android:textColor="@color/black"
             android:inputType="textPersonName"
             android:background="@drawable/edit_text_style"
             android:layout_marginBottom="16dp"/>
@@ -39,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Last name"
+            android:textColor="@color/black"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_marginBottom="8dp"/>
 
@@ -47,6 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Last name"
+            android:textColor="@color/black"
             android:inputType="textPersonName"
             android:background="@drawable/edit_text_style"
             android:layout_marginBottom="16dp"/>
@@ -55,6 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Email"
+            android:textColor="@color/black"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_marginBottom="8dp"/>
 
@@ -63,6 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
+            android:textColor="@color/black"
             android:inputType="textEmailAddress"
             android:background="@drawable/edit_text_style"
             android:layout_marginBottom="16dp"/>
@@ -71,6 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Password"
+            android:textColor="@color/black"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_marginBottom="8dp"/>
 
@@ -79,6 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
+            android:textColor="@color/black"
             android:inputType="textPassword"
             android:background="@drawable/edit_text_style"
             android:layout_marginBottom="16dp"/>
@@ -87,6 +95,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Re-enter password"
+            android:textColor="@color/black"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_marginBottom="8dp"/>
 
@@ -95,6 +104,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Re-enter password"
+            android:textColor="@color/black"
             android:inputType="textPassword"
             android:background="@drawable/edit_text_style"
             android:layout_marginBottom="24dp"/>
@@ -104,8 +114,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Sign up"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/button_style"
+            android:backgroundTint="@color/blue"
+            android:textColor="@color/white"
             android:layout_marginBottom="16dp"/>
 
     </LinearLayout>
